# TEKA3003-Miniprojekti

./: .coveragerc  .gitignore  .pylintrc  LICENSE  PIPE  README.md  bib.bib  codecov.yml  log.html  output.xml  pyproject.toml  refs.json  report.html  retro.md
.github/workflows/: main.yml
src/: AppLibrary.py  app.py  bibtex.py  console.py  fields.py  main.py  test.txt
src/tests/: add_source.robot  edit_sources.robot  hello_robot.robot  list_sources.robot  resource.robot  search_sources.robot  sort_sources.robot  startup.robot  test_bibtex.py  test_console.py  test_fields.py
