[project]
name = "teka3003-miniprojekti"
version = "0.1.0"
description = ""
authors = [
    {name = "tujokuus",email = "tujokuus@student.jyu.fi"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bibtexparser (>=2.0.0b8,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.3,<5.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]

[tool.poetry.dependencies]
bibtexparser = {allow-prereleases = true}

[tool.pytest.ini_options]
pythonpath = [
  "."
]
